# django-timestampable

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
tests/: models.py  serializers.py  settings.py  urls.py  views.py  viewsets.py
tests/fixtures/: bars.json  foos.json
tests/tests/: __init__.py  drf.py  settings.py  signals.py  softdelete.py  timestamps.py
timestamps/: apps.py  managers.py  models.py  querysets.py  signals.py  utils.py
timestamps/drf/: __init__.py  mixins.py  permissions.py  routers.py  utils.py  viewsets.py
timestamps/tests/: __init__.py  models.py  softdelete.py  timestamps.py
