[metadata]
name = django-xgeeks-timestamps
version = 0.1
description = Timestamps and Soft Delete Patterns in Django Models
long_description = file: README.md
url = https://github.com/xgeekshq/django-timestamps/
author = Daniel Pinto
author_email = dmp593@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages = find:
