[metadata]
name = django-timestampable
version = 1.0.2
description = Timestamps and Soft Delete Patterns in Django Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xgeekshq/django-timestampable/
author = Daniel Pinto
author_email = dmp593@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages =
    timestamps
    timestamps.drf
python_requires = >=3.6
setup_requires =
    setuptools >= 54.1
install_requires =
    Django>=3.1
    djangorestframework>=3.12
    aspectlib>=1.5
